--- a/openapi/swagger-ui.html
+++ b/openapi/swagger-ui.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>JICU API文档</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css">
 </head>
 <body>
@@ -24,6 +24,7 @@ window.onload = function() {
       });
     window.ui = ui
 }
+
 
 </script>
 </body>
